--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 ---
 ---
+{% include header.html %}
+<div class="wrapper space">
+	<section class="categories">
+		{% assign categories = site.categories | sort %}
+		{% for category in categories %}
+			{% assign name = category[0] %}
+			{% assign posts = category[1] %}
+			{% assign size = posts | size %}
+			<section class="category">
+					<h3>
+						<a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ name | replace: "-", " " }}</a>
+					</h3>
 
-
-<section class="categories">
-	{% assign categories = site.categories | sort %}
-	{% for category in categories %}
-		{% assign name = category[0] %}
-		{% assign posts = category[1] %}
-		{% assign size = posts | size %}
-		<section class="category">
-				<h3>
-					<a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ name | replace: "-", " " }}</a>
-				</h3>
-
-			<ul>
-				{% assign tutorials = posts | sort: "title" %}
-				{% for tutorial in tutorials limit: 4 %}
-					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
-				{% endfor %}
-				{% if size > 4 %}
-					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ size | minus: 4 }} more...</a></li>
-				{% endif %}
-			</ul>
-		</section>
-	{% endfor %}
-</section>
+				<ul>
+					{% assign tutorials = posts | sort: "title" %}
+					{% for tutorial in tutorials limit: 4 %}
+						<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
+					{% endfor %}
+					{% if size > 4 %}
+						<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ size | minus: 4 }} more...</a></li>
+					{% endif %}
+				</ul>
+			</section>
+		{% endfor %}
+	</section>
+</div>
+{% include footer.html %}
