--- a/search.html
+++ b/search.html
@@ -2,10 +2,12 @@
 title: Search
 sitemap: false
 ---
-
-<p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
-<ul id="search-results"></ul>
-
+{% include header.html %}
+<div class="wrapper space">
+	<p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
+	<ul id="search-results"></ul>
+</div>
+{% include footer.html %}
 <script>
 	window.data = {
 		{% for post in site.posts %}
