Issue #118522 Feat: Document for TJ UCM

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 				<ul>
 					{% assign tutorials = posts | sort: "title" %}
 					{% for tutorial in tutorials limit: 4 %}
+					{% if tutorial.showSidebar %}
 						<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
+						{% endif %}
 					{% endfor %}
 					{% if size > 4 %}
 						<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ size | minus: 4 }} more...</a></li>
