--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
 			{% assign size = posts | size %}
 			<section class="category">
 					<h3>
-						<a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ name | replace: "-", " " }}</a>
+						<a href="{{ site.baseurl }}/{{ name | downcase }}">{{ name | replace: "-", " " }}</a>
 					</h3>
 
 				<ul>
-					{% assign tutorials = posts | sort: "title" %}
+					{% assign tutorials = posts |  sort: "nav_ordering" %}
 					{% for tutorial in tutorials limit: 4 %}
-						<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
+						{% if tutorial.showSidebar %}
+						{% if tutorial.published %}
+							<li>
+								<a href="{{ site.baseurl }}{{ tutorial.url }}">
+									{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}
+								</a>
+							</li>
+						{% endif %}
+						{% endif %}
 					{% endfor %}
 					{% if size > 4 %}
 						<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ size | minus: 4 }} more...</a></li>
